@@ -17,6 +17,10 @@
 		<filename>index.html</filename>
 		<folder>tmpl</folder>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.mod_toolbar.ini</language>
+		<language tag="en-GB">en-GB.mod_tollbar.sys.ini</language>	
+	</languages>
 	<help key="JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_TOOLBAR" />
 	<config>
 		<fields name="params">
