@@ -18,6 +18,10 @@
 		<filename>index.html</filename>
 		<folder>tmpl</folder>
 	</files>
+	<languages>
+		<language tag="en-GB">en-GB.mod_unread.ini</language>
+		<language tag="en-GB">en-GB.mod_unread.sys.ini</language>	
+	</languages>
 	<help key="JHELP_EXTENSIONS_MODULE_MANAGER_ADMIN_UNREAD" />
 	<config>
 		<fields name="params">
